[package]
name = "ex-libs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4"}
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1.13", features = ["full"]}
serde = {version = "1.0"}